# EmptyCmakeProject

./: .clang-format  CMakeLists.txt  README.html  README.md
app/: CMakeLists.txt  main.cpp
include/: lib.h
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  test.cpp
tools/: setproject.sh
